@@ -2,35 +2,31 @@ package com.restaurant.example.restaurant_service.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import com.restaurant.example.restaurant_service.dto.RestaurantDTO;
 import com.restaurant.example.restaurant_service.entity.Restaurant;
-import com.restaurant.example.restaurant_service.exceptions.RestaurantNotFoundException ;
 import com.restaurant.example.restaurant_service.mapper.RestaurantMapper;
 import com.restaurant.example.restaurant_service.repo.RestaurantRepo;
 
 @Service
 public class RestaurantService {
 
-	@Autowired
-	RestaurantRepo restaurantRepo;
-	
+	private final RestaurantRepo restaurantRepo;
+
+	public RestaurantService(RestaurantRepo restaurantRepo) {
+		this.restaurantRepo = restaurantRepo;
+	}
 
 	public List<RestaurantDTO> findAllRestaurants() {
 		
 		List<Restaurant> restaurants = restaurantRepo.findAll();
 		
-		List<RestaurantDTO> restaurantDTOList = restaurants.stream()
-				.map(restaurant -> RestaurantMapper.INSTANCE.mapRestaurantToRestaurantDTO(restaurant))
-				.collect(Collectors.toList());
-		
-		return restaurantDTOList;
+		return restaurants.stream()
+				.map(RestaurantMapper.INSTANCE::mapRestaurantToRestaurantDTO)
+				.toList();
 		
 	}
 
@@ -43,15 +39,16 @@ public class RestaurantService {
 
 	public ResponseEntity<RestaurantDTO> fetchRestaurantById(Integer id) {
 		
+		if (id == null) {
+			return ResponseEntity.notFound().build();
+		}
+		
 		Optional<Restaurant> restaurant = restaurantRepo.findById(id);
 		
 		if(restaurant.isPresent())
 		{
-			return new ResponseEntity<>(RestaurantMapper.INSTANCE.mapRestaurantToRestaurantDTO((restaurant.get())),HttpStatus.OK);
+			return ResponseEntity.ok(RestaurantMapper.INSTANCE.mapRestaurantToRestaurantDTO(restaurant.get()));
 		}
-		else {
-		   throw new RestaurantNotFoundException("Restaurant with ID ="+id+ " not found");
-		}
-		//return new ResponseEntity<>(null,HttpStatus.NOT_FOUND);
+		return ResponseEntity.notFound().build();
 	}
 }
